Redirect to sudoman.ninth.su/spacedolphin
Since my project is now hosted elsewhere, I'm redirecting to the above
page.

--- a/index.html
+++ b/index.html
@@ -1,85 +1,18 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+	<META HTTP-EQUIV="Refresh"
+	      CONTENT="1; URL=http://sudoman.ninth.su/spacedolphin">
+	<title>sudoman</title>
+    </head>
 
-    <title>SpaceDolphin by sudoman</title>
-  </head>
+    <body>
 
-  <body>
+    redirecting...
 
-    <header>
-      <div class="container">
-        <h1>SpaceDolphin</h1>
-        <h2>A simple 2D game using the Chipmunk Physics engine.</h2>
+    </body>
 
-        <section id="downloads">
-          <a href="https://github.com/sudoman/SpaceDolphin/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/sudoman/SpaceDolphin/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/sudoman/SpaceDolphin" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <p>This is a simple little toy game released under
-<strong><a href="http://www.gnu.org/licenses/quick-guide-gplv3.html">GPLv3+</a></strong>. It uses the
-<a href="http://chipmunk-physics.net/">Chipmunk Physics</a> engine, which is under a
-permissive license.</p>
-
-<p><img src="http://i.imgur.com/g0oow.png" alt="sample screenshot"></p>
-
-<h3>Build Instructions:</h3>
-
-<p><strong>SDL</strong>, <strong>SDL_gfx</strong>, and <strong>CMake</strong> need to be installed to build and run this
-game. The following command will install these packages for you in an apt-based
-packaging system, used by many distros of <a href="http://www.gnu.org/">GNU/Linux</a>:
-(Pacakge names may be different in newer or older systems.)</p>
-
-<pre><code>sudo apt-get install build-essential cmake libsdl1.2-dev \
-                     libsdl-gfx1.2-dev
-</code></pre>
-
-<p>Next, you need to grab the source code from github. (The clone only needs to be
-done once):</p>
-
-<pre><code>git clone https://sudoman@github.com/sudoman/SpaceDolphin.git
-cd SpaceDolphin
-</code></pre>
-
-<p>In the future, you can pull the changes to update the source code:</p>
-
-<pre><code>git pull
-</code></pre>
-
-<p>To build the game in the SpaceDolphin directory, run:</p>
-
-<pre><code>mkdir build ; cd build
-cmake ..
-make
-</code></pre>
-
-<p>CMake will automatically build and statically link the included Chipmunk
-Physics library, without needing to install it.</p>
-
-<h3>Game Instructions</h3>
-
-<p>To play the game, run this:</p>
-
-<pre><code>./spacedolphin
-</code></pre>
-
-<p>Control your flight with the arrow keys so that you can knock objects around
-the screen. Go nuts with it! :)</p>
-      </section>
-    </div>
-
-    
-  </body>
 </html>
+
